--- a/docker/Dockerfile-server
+++ b/docker/Dockerfile-server
@@ -2,7 +2,7 @@ FROM nvcr.io/nvidia/cuda:12.0.0-cudnn8-devel-ubuntu22.04 as cuda12
 WORKDIR /
 COPY . /
 RUN apt-get update
-RUN apt-get install -y build-essential libxmu-dev libxi-dev libgl-dev libosmesa-dev git liblog4cplus-dev cmake curl
+RUN apt-get install -y build-essential libxmu-dev libxi-dev libgl-dev libosmesa-dev git liblog4cplus-dev cmake curl wget
 RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-archive-keyring.gpg && \
     mv cuda-archive-keyring.gpg /usr/share/keyrings/cuda-archive-keyring.gpg && \
     echo "deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/ /" | tee /etc/apt/sources.list.d/cuda-ubuntu2204-x86_64.list && \
