--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ target_link_libraries(gvirtus-backend gvirtus-communicators Threads::Threads)
 gvirtus_install_target(gvirtus-backend)
 
 add_subdirectory(plugins/cublas)
+add_subdirectory(plugins/cudadr)
 add_subdirectory(plugins/cudart)
 add_subdirectory(plugins/cufft)
 add_subdirectory(plugins/curand)
