--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,10 +71,11 @@ target_link_libraries(gvirtus-backend gvirtus-communicators Threads::Threads)
 gvirtus_install_target(gvirtus-backend)
 
 add_subdirectory(plugins/cublas)
+add_subdirectory(plugins/cudadr)
 add_subdirectory(plugins/cudart)
 add_subdirectory(plugins/cufft)
 add_subdirectory(plugins/curand)
-add_subdirectory(plugins/cudnn)
+#add_subdirectory(plugins/cudnn)
 #add_subdirectory(plugins/cusolver)
 #add_subdirectory(plugins/cusparse)
 
