fix image repository to GVirtuS
Signed-off-by: rongfu.leng <lenronfu@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            ghcr.io/MegaCloudContainer/${{ GITHUB_REPOSITORY_NAME_PART }}/server:dev
+            ghcr.io/MegaCloudContainer/GVirtuS/server:dev
 
       - name: Build and push server
         id: docker_build
@@ -50,5 +50,5 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            ghcr.io/MegaCloudContainer/${{ GITHUB_REPOSITORY_NAME_PART }}/client:dev            
+            ghcr.io/MegaCloudContainer/GVirtuS/client:dev            
 
