--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,7 +32,7 @@ jobs:
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and push server
-        id: docker_build
+        id: docker_build_server
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -43,7 +43,7 @@ jobs:
             ghcr.io/MegaCloudContainer/GVirtuS/server:${{ github.ref_name }}
 
       - name: Build and push client
-        id: docker_build
+        id: docker_build_client
         uses: docker/build-push-action@v4
         with:
           context: .
