add debug log level
Signed-off-by: rongfu.leng <lenronfu@gmail.com>

--- a/docker/Dockerfile-client
+++ b/docker/Dockerfile-client
@@ -11,3 +11,5 @@ COPY --from=cuda11 /root/GVirtuS /GVirtuS
 ENV GVIRTUS_HOME=/GVirtuS
 ENV GVIRTUS_CONFIG=${GVIRTUS_HOME}/etc/properties.json
 ENV LD_LIBRARY_PATH=${GVIRTUS_HOME}/lib:${GVIRTUS_HOME}/lib/frontend:${LD_LIBRARY_PATH}
+ENV GVIRTUS_LOGLEVEL=10000
+RUN mkdir /licenses && mv /NGC-DL-CONTAINER-LICENSE /licenses/NGC-DL-CONTAINER-LICENSE
