--- a/example/backend-gpu.yml
+++ b/example/backend-gpu.yml
@@ -26,3 +26,17 @@ spec:
               memory: 512Mi
               nvidia.com/gpu: '1'
       restartPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gvirtus-backend
+  namespace: default
+spec:
+  ports:
+    - port: 9999
+      protocol: TCP
+      targetPort: 9999
+  selector:
+    app: gvirtus-backend
+  type: NodePort
