--- a/docker/Dockerfile-server
+++ b/docker/Dockerfile-server
@@ -1,9 +1,16 @@
-FROM nvcr.io/nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04 as cuda11
+FROM nvcr.io/nvidia/cuda:12.0.0-cudnn8-devel-ubuntu22.04 as cuda12
 WORKDIR /
 COPY . /
 RUN apt-get update
 RUN apt-get install -y build-essential libxmu-dev libxi-dev libgl-dev libosmesa-dev git liblog4cplus-dev cmake curl
 RUN mkdir build && cd build && cmake .. && make && make install
+
+#FROM nvcr.io/nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04 as cuda11
+#WORKDIR /
+#COPY . /
+#RUN apt-get update
+#RUN apt-get install -y build-essential libxmu-dev libxi-dev libgl-dev libosmesa-dev git liblog4cplus-dev cmake curl
+#RUN mkdir build && cd build && cmake .. && make && make install
 
 #FROM nvcr.io/nvidia/cuda:10.2-devel-ubuntu18.04 as cuda10
 #WORKDIR /
@@ -13,9 +20,9 @@ RUN mkdir build && cd build && cmake .. && make && make install
 #RUN mkdir build && cd build && cmake .. && make && make install
 
 
-FROM nvcr.io/nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
+FROM nvcr.io/nvidia/cuda:12.0.0-cudnn8-runtime-ubuntu22.04
 WORKDIR /
-COPY --from=cuda11 /root/GVirtuS /GVirtuS
+COPY --from=cuda12 /root/GVirtuS /GVirtuS
 RUN sed -i 's/127.0.0.1/0.0.0.0/g' /GVirtuS/etc/properties.json
 ENV GVIRTUS_HOME=/GVirtuS
 ENV LD_LIBRARY_PATH=${GVIRTUS_HOME}/lib:${LD_LIBRARY_PATH}
